# skills

./: .gitignore  README.en.md  README.md  package.json
resources/artifacts/: 本周工作周报_2026-02-01.docx  本周工作周报_2026-02-01.json  本周工作周报_ai.json
resources/legacy-python/: pyproject.toml  weekly.config.json  weekly.py  weekly_render.py
scripts/: weekly.js
skills/report/: README.en.md  README.md  SKILL.md  package.json
skills/report/resources/: config.example.json  prompt.txt
skills/report/scripts/: weekly.js  weekly_render.js
skills/report/src/: weekly.ts  weekly_render.ts
skills/weekly-report/: SKILL.md  package.json  pnpm-lock.yaml  tsconfig.json
skills/weekly-report/resources/: config.example.json  prompt.txt
skills/weekly-report/scripts/: weekly.js  weekly_render.js
skills/weekly-report/src/: weekly.ts  weekly_render.ts
